--- a/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
+++ b/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
@@ -189,6 +189,12 @@
     <Compile Include="OptionsControl.Designer.cs">
       <DependentUpon>OptionsControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="OptionsLegacyControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OptionsLegacyControl.Designer.cs">
+      <DependentUpon>OptionsLegacyControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Package.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProgressInformationDialog.cs">
@@ -251,6 +257,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OptionsControl.resx">
       <DependentUpon>OptionsControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OptionsLegacyControl.resx">
+      <DependentUpon>OptionsLegacyControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProgressInformationDialog.resx">
       <DependentUpon>ProgressInformationDialog.cs</DependentUpon>
